Verif/Test/Invalide/test_erreur_3.74-83.deca
// Description:
//    Programme soulevant l'erreur (3.74)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Les types 'void' et 'boolean' sont incompatibles avec l'opérateur binaire '%' (règle 3.74)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x() {
   }
}

int var;
A a;
{
   var = a.x() % true;
}